# custom-whisper-api

./: Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
src/: index.html  main.py
