[project]
name = "custom-whisper-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "debugpy>=1.8.12",
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "uvicorn>=0.34.0",
    "whisper>=1.1.10",
]
